# MiniAnnaApp

./: .gitignore  README.md  README.zh-CN.md  app.json  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
anna-executa-examples-main/examples/anna-app-aps-files-demo/: package.json
anna-executa-examples-main/examples/anna-app-embed-demo/: manifest.json  package.json
anna-executa-examples-main/examples/anna-app-file-upload-demo/: app.json  manifest.json
anna-executa-examples-main/examples/anna-app-focus-flow/: .gitignore  package.json  pnpm-lock.yaml
docs/: acceptance-matrix.md  binary-packaging.md  llm-permission-investigation.md  mock-sampling-fixture.md  ui-harness-pending.md
evidence/: binary-windows.md  protocol-smoke.jsonl  ui-harness-checklist.md  ui-no-llm-rpc.jsonl
executas/mini-notes-summary-python/: executa.json  executa_manifest.py  mini_notes_summary.py  pyinstaller.spec  pyproject.toml
executas/mini-notes-summary-python/executa_sdk/: __init__.py
executas/mini-notes-summary-python/packaging/: manifest.template.json
executas/mini-notes-summary-python/tests/: test_protocol.py
fixtures/: sampling-summary.jsonl
public/: anna-tool-ids.js
scripts/: build_binary.py  check_identity.py  check_no_direct_llm.py  check_workflow.py  inspect_archive.py  protocol_smoke.py  sanitize_ui_rpc_log.py  smoke_binary.py  verify_archive.py
src/: App.tsx  styles.css
src/anna/: runtime.ts  storage.ts  tools.ts  types.ts
tests/: test_sanitize_ui_rpc_log.py
(+15 files in other folders)
